<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"/>

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noNetwork"
            android:text="@string/radio_none"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anyNetwork"
            android:text="@string/radio_any"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wifiNetwork"
            android:text="@string/radio_wifi"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta2"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idleSwitch"
            android:text="@string/idleSwitch"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chargingSwitch"
            android:text="@string/chargingSwitch"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta3"
            android:id="@+id/seekBarLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta4"
            android:id="@+id/seekBarProgress"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="4dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_margin="4dp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_aceptar"
        android:onClick="scheduleJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cancel"
        android:onClick="cancelJobs"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"/>

</LinearLayout>